package ucf.assignments;

/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Esteban Leyte-Vidal
 */

import javafx.event.ActionEvent;
import javafx.fxml.FXML;
import javafx.scene.control.Button;
import javafx.scene.control.CheckBox;
import javafx.scene.control.TableColumn;
import javafx.scene.control.TableView;

public class CommandsForList
{

    @FXML
    private Button CreateList;

    @FXML
    private Button CreateItem;

    @FXML
    private Button Edit;

    @FXML
    private Button Delete;

    @FXML
    private CheckBox ListBox;

    @FXML
    private CheckBox ItemBox;

    @FXML
    private CheckBox CompBox;

    @FXML
    private TableView<?> ListTable;

    @FXML
    private TableColumn<?, ?> ListNameTable;

    @FXML
    private TableColumn<?, ?> StatusTable;

    @FXML
    void CompCheckTrue(ActionEvent event)
    {
        //User checks the box and lists will sort by completed true/false
    }

    @FXML
    void EditTrue(ActionEvent event)
    {
        //Will check for user input if the edit button was selected
    }

    @FXML
    void ItemCheckTrue(ActionEvent event)
    {
        //User checks the box and only items will show
    }

    @FXML
    void ListCheckTrue(ActionEvent event)
    {
        //User checks the box and only lists will show
    }

    @FXML
    void NewItemTrue(ActionEvent event)
    {
        //Will check for user input if the create item button was selected
    }

    @FXML
    void NewListTrue(ActionEvent event)
    {
        //Will check for user input if the create list button was selected
    }

    @FXML
    void DeleteTrue(ActionEvent event)
    {
        //Will check for user input if the delete button was selected
    }

}
