package ucf.assignments;

/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Esteban Leyte-Vidal
 */

import javafx.event.ActionEvent;
import javafx.fxml.FXML;
import javafx.scene.control.Button;

public class ConfirmDel
{
    @FXML
    private Button True;

    @FXML
    private Button False;

    @FXML
    void ifFalse(ActionEvent event)
    {

    }

    @FXML
    void ifYes(ActionEvent event)
    {

    }

}